--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.0.0",
     "@strapi/strapi": "4.0.0",
     "koa-session2": "^2.2.10",
+    "mysql": "^2.18.1",
     "sqlite3": "5.0.2"
   },
   "author": {
